--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   tuple: ^2.0.0
   json_annotation: ^4.4.0
+  audioplayers: ^0.20.1
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +63,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/idioms.json
+    - assets/audios/keypress-standard.mp3
+    - assets/audios/keypress-return.mp3
+    - assets/audios/keypress-delete.mp3
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
