--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   screenshot: ^1.2.3
   share_plus: ^4.0.2
   fluttertoast: ^8.0.9
+  flutter_svg: ^1.0.3
+  flutter_svg_provider: ^1.0.3
 
 dev_dependencies:
   flutter_test:
@@ -72,6 +74,7 @@ flutter:
     - assets/audios/keypress-standard.mp3
     - assets/audios/keypress-return.mp3
     - assets/audios/keypress-delete.mp3
+    - assets/images/welcome_background.svg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
